# region-proxy

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml
cloudformation/: region-proxy-iam.yaml
docs/: hackernews_post.md  zenn_article.md
src/: cli.rs  main.rs
src/aws/: ec2.rs  mod.rs
src/config/: mod.rs  preferences.rs  regions.rs
src/proxy/: macos.rs  mod.rs  ssh.rs
src/state/: mod.rs  state.rs
terraform/: main.tf
