[package]
name = "region-proxy"
version = "1.1.0"
edition = "2021"
authors = ["Masanari Higashi"]
description = "A CLI tool to create a SOCKS proxy through AWS EC2 in any region"
license = "MIT"
repository = "https://github.com/M-Igashi/region-proxy"
keywords = ["aws", "ec2", "proxy", "socks", "ssh"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.95"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.29", features = ["signal", "process"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
